--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     
     <div class="card">
 			<div class="title">
-				<h1>Demin Slayer Ending 3</h1>
-				<h2></h2>
+				<h1>Demon Slayer Ending 3</h1>
+				<h2>Asu ga Kuru</h2>
 			</div>
 			<div class="content">
-				<p>PDF: <a href="/pdfs/帰ろう_(Kaerou) V.pdf">帰ろう_(Kaerou) V.pdf</a></p>
-				<p>From: <a href="https://musescore.com/user/27846089/scores/6168122">Musescore</a></p>
+				<p>PDF: <a href="/pdfs/Demon Slayer Ending 3">Demon Slayer Ending 3.pdf</a></p>
+				<p>From: <a href="https://musescore.com/user/9080451/scores/7273857">Musescore</a></p>
 				<p>Date: 08/15/2022</p>
 			</div>
 		</div>
