--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Viola Sheet Music</title>
-		<link rel="stylesheet" href="/public/styles.css" />
+		<link rel="stylesheet" type="text/css" href="https://theunk51.github.io/styles.css"" />
 
 		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
 			<div class="card">
 				<div class="title">
 					<h1>Kaerou</h1>
-					<h2></h2>
+				
 				</div>
 				<div class="content">
 					<p>PDF: <a href="/pdfs/帰ろう_(Kaerou) V.pdf">帰ろう_(Kaerou) V.pdf</a></p>
