--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Viola Sheet Music</title>
-		<link rel="stylesheet" type="text/css" href="https://theunk51.github.io/styles.css"" />
+		<link rel="stylesheet" type="text/css" href="https://github.com/theunk51/viola-sheet-music/blob/eecda0f3b77f7dfe594409e1c0014ae6cab1e68b/styles.css" />
 
 		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
