--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Viola Sheet Music</title>
-		<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/theunk51/viola-sheet-music/main/styles.css" />
+		<link rel="stylesheet" type="text/css" href="../styles.css" />
 
 		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
