--- a/index.html
+++ b/index.html
@@ -177,12 +177,13 @@
 			    </div>
 			    <div class="content">
 				<p>PDF: <a href="https://theunk51.github.io/viola-sheet-music/pdfs/Sunrise (해야).pdf">Sunrise (해야).pdf</a></p>
-				<p>From: <a href="https://flat.io/score/5c464ff1f73159509de5f367-sunrise"></a>Flat.io</p>
+				<p>From: <a href="https://flat.io/score/5c464ff1f73159509de5f367-sunrise">Flat.io</a></p>
 				<p>Date: 08/15/22</p>
 			    </div>
 			</div>
-
 		</main>
-
 	</body>
+	<footer style="margin:auto; width: 50%">
+		<p style="text-align: center><a href="https://github.com/theunk51/viola-sheet-music">Visit Github Repository</a></p>
+	</footer>
 </html>
