--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 			</div>
 		</main>
 	</body>
-	<footer style="margin:auto; width: 50%">
-		<p style="text-align: center><a href="https://github.com/theunk51/viola-sheet-music">Visit Github Repository</a></p>
+	<footer style="margin:auto; width: 50%; border:dashed; border-color:white;">
+		<p><a href="https://github.com/theunk51/viola-sheet-music">Visit Github Repository</a></p>
 	</footer>
 </html>
