--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 			    </div>
 			    <div class="content">
 				<p>PDF: <a href="https://theunk51.github.io/viola-sheet-music/pdfs/Hunter x Hunter Ending 2.pdf">Hunter x Hunter Ending 2.pdf</a></p>
-				<p>From: <a href="https://musescore.com/user/9080451/scores/6256218"></a>https://musescore.com/user/9080451/scores/6256218</p>
+				<p>From: <a href="https://musescore.com/user/9080451/scores/6256218">https://musescore.com/user/9080451/scores/6256218</a></p>
 				<p>Date: 08/15/22</p>
 			    </div>
 			</div>
@@ -165,7 +165,7 @@
 			    </div>
 			    <div class="content">
 				<p>PDF: <a href="https://theunk51.github.io/viola-sheet-music/pdfs/Flower.pdf">Flower.pdf</a></p>
-				<p>From: <a href="https://musescore.com/user/28547426/scores/5589353"></a>Musescore</p>
+			    	<p>From: <a href="https://musescore.com/user/28547426/scores/5589353">Musescore</a></p>
 				<p>Date: 08/15/22</p>
 			    </div>
 			</div>
@@ -184,6 +184,6 @@
 		</main>
 	</body>
 	<footer style="margin:auto;">
-		<p><a href="https://github.com/theunk51/viola-sheet-music">Visit Github Repository</a></p>
+		<p style="text-align:center"><a href="https://github.com/theunk51/viola-sheet-music">Visit Github Repository</a></p>
 	</footer>
 </html>
